--- a/P3 - Arquivo F.ipynb
+++ b/P3 - Arquivo F.ipynb
@@ -1006,7 +1006,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "É sempre importante salientar que todo projeto possui propostas de melhoria e aperfeiçoamento, que podem levar a resultados mais eficientes. No nosso não é diferente.\n",
+    "\n",
+    "Um ponto importante é de que a maioria da população de Iowa é considerada branca e isso "
+   ]
   },
   {
    "cell_type": "markdown",
