--- a/one_hot_encoder.ipynb
+++ b/one_hot_encoder.ipynb
@@ -30,99 +30,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = OneHotEncoder()\n",
-    "def one_hot_enc(data,num=[],cat=[]):\n",
-    "    d=data[cat]\n",
-    "    print (d.shape)\n",
+    "def filtra(data, cat=[]):\n",
+    "    d=data\n",
     "    for c in cat:\n",
     "        n=0\n",
     "        while n < len(d[c]):\n",
     "            if d[c][n] not in d[c].values:\n",
     "                d[c][n]='not'\n",
     "            n+=1\n",
-    "    dnum=data[num]\n",
-    "    print (dnum.shape)\n",
-    "    encoded=encoder.fit_transform(d)\n",
-    "    array=encoded.toarray()\n",
-    "    numarray=dnum.values\n",
-    "    return np.concatenate((numarray, array), axis=1)"
+    "    return d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(26020, 7)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\bruno\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(26020, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "encoded=one_hot_enc(db, num=['Fiscal Year Released'],cat=['Main Supervising District','Race - Ethnicity',\n",
-    "                                                      'Convicting Offense Classification','Convicting Offense Type',\n",
-    "                                                      'Convicting Offense Subtype','Release Type','Part of Target Population'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = OneHotEncoder()\n",
-    "def one_hot_enc_na(data,num=[],cat=[]):\n",
-    "    d=data[cat]\n",
-    "    dnum=data[num]\n",
-    "    print (dnum.shape)\n",
-    "    encoded=encoder.fit_transform(d)\n",
-    "    array=encoded.toarray()\n",
-    "    numarray=dnum.values\n",
-    "    return np.concatenate((numarray, array), axis=1)"
+    "filtrado = filtra (db, cat=['Main Supervising District','Race - Ethnicity','Convicting Offense Classification'\n",
+    "                            ,'Convicting Offense Type','Convicting Offense Subtype','Release Type','Part of Target Population'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(16438, 1)\n"
+     "ename": "NameError",
+     "evalue": "name 'filtado' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-1f85318d238c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfiltado\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34mr'C:\\Users\\bruno\\Documents\\2 semestre\\C_dados\\PF\\sem_NaN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtado' is not defined"
      ]
     }
    ],
    "source": [
-    "encoded_dropna=one_hot_enc_na(db.dropna(), num=['Fiscal Year Released'],cat=['Main Supervising District','Race - Ethnicity',\n",
-    "                                                      'Convicting Offense Classification','Convicting Offense Type',\n",
-    "                                                      'Convicting Offense Subtype','Release Type','Part of Target Population'])\n"
+    "filtrado.to_csv (r'C:\\Users\\bruno\\Documents\\2 semestre\\C_dados\\PF\\sem_NaN', index = None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fiscal Year Released</th>\n",
+       "      <th>Race - Ethnicity</th>\n",
+       "      <th>Age At Release</th>\n",
+       "      <th>Convicting Offense Classification</th>\n",
+       "      <th>Convicting Offense Type</th>\n",
+       "      <th>Convicting Offense Subtype</th>\n",
+       "      <th>Main Supervising District</th>\n",
+       "      <th>Release Type</th>\n",
+       "      <th>Part of Target Population</th>\n",
+       "      <th>Recidivism - Return to Prison numeric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>Under 25</td>\n",
+       "      <td>D Felony</td>\n",
+       "      <td>Violent</td>\n",
+       "      <td>Assault</td>\n",
+       "      <td>4JD</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>55 and Older</td>\n",
+       "      <td>D Felony</td>\n",
+       "      <td>Public Order</td>\n",
+       "      <td>OWI</td>\n",
+       "      <td>7JD</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>D Felony</td>\n",
+       "      <td>Property</td>\n",
+       "      <td>Burglary</td>\n",
+       "      <td>5JD</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>55 and Older</td>\n",
+       "      <td>C Felony</td>\n",
+       "      <td>Drug</td>\n",
+       "      <td>Trafficking</td>\n",
+       "      <td>8JD</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Black - Non-Hispanic</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>D Felony</td>\n",
+       "      <td>Drug</td>\n",
+       "      <td>Trafficking</td>\n",
+       "      <td>3JD</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>White - Hispanic</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>C Felony</td>\n",
+       "      <td>Violent</td>\n",
+       "      <td>Murder/Manslaughter</td>\n",
+       "      <td>not</td>\n",
+       "      <td>Discharged End of Sentence</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26016</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>D Felony</td>\n",
+       "      <td>Property</td>\n",
+       "      <td>Vandalism</td>\n",
+       "      <td>5JD</td>\n",
+       "      <td>Paroled to Detainer - Out of State</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26017</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Black - Non-Hispanic</td>\n",
+       "      <td>Under 25</td>\n",
+       "      <td>Aggravated Misdemeanor</td>\n",
+       "      <td>Violent</td>\n",
+       "      <td>Other Violent</td>\n",
+       "      <td>1JD</td>\n",
+       "      <td>Discharged End of Sentence</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26018</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>Under 25</td>\n",
+       "      <td>D Felony</td>\n",
+       "      <td>Drug</td>\n",
+       "      <td>Other Drug</td>\n",
+       "      <td>5JD</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26019</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>White - Non-Hispanic</td>\n",
+       "      <td>35-44</td>\n",
+       "      <td>C Felony</td>\n",
+       "      <td>Violent</td>\n",
+       "      <td>Other Violent</td>\n",
+       "      <td>not</td>\n",
+       "      <td>Parole</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26020 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Fiscal Year Released      Race - Ethnicity Age At Release   \\\n",
+       "0                      2010  White - Non-Hispanic        Under 25   \n",
+       "1                      2010  White - Non-Hispanic    55 and Older   \n",
+       "2                      2010  White - Non-Hispanic           25-34   \n",
+       "3                      2010  White - Non-Hispanic    55 and Older   \n",
+       "4                      2010  Black - Non-Hispanic           25-34   \n",
+       "...                     ...                   ...             ...   \n",
+       "26015                  2015      White - Hispanic           25-34   \n",
+       "26016                  2015  White - Non-Hispanic           25-34   \n",
+       "26017                  2015  Black - Non-Hispanic        Under 25   \n",
+       "26018                  2015  White - Non-Hispanic        Under 25   \n",
+       "26019                  2015  White - Non-Hispanic           35-44   \n",
+       "\n",
+       "      Convicting Offense Classification Convicting Offense Type  \\\n",
+       "0                              D Felony                 Violent   \n",
+       "1                              D Felony            Public Order   \n",
+       "2                              D Felony                Property   \n",
+       "3                              C Felony                    Drug   \n",
+       "4                              D Felony                    Drug   \n",
+       "...                                 ...                     ...   \n",
+       "26015                          C Felony                 Violent   \n",
+       "26016                          D Felony                Property   \n",
+       "26017            Aggravated Misdemeanor                 Violent   \n",
+       "26018                          D Felony                    Drug   \n",
+       "26019                          C Felony                 Violent   \n",
+       "\n",
+       "      Convicting Offense Subtype Main Supervising District  \\\n",
+       "0                        Assault                       4JD   \n",
+       "1                            OWI                       7JD   \n",
+       "2                       Burglary                       5JD   \n",
+       "3                    Trafficking                       8JD   \n",
+       "4                    Trafficking                       3JD   \n",
+       "...                          ...                       ...   \n",
+       "26015        Murder/Manslaughter                       not   \n",
+       "26016                  Vandalism                       5JD   \n",
+       "26017              Other Violent                       1JD   \n",
+       "26018                 Other Drug                       5JD   \n",
+       "26019              Other Violent                       not   \n",
+       "\n",
+       "                             Release Type Part of Target Population  \\\n",
+       "0                                  Parole                       Yes   \n",
+       "1                                  Parole                       Yes   \n",
+       "2                                  Parole                       Yes   \n",
+       "3                                  Parole                       Yes   \n",
+       "4                                  Parole                       Yes   \n",
+       "...                                   ...                       ...   \n",
+       "26015          Discharged End of Sentence                       Yes   \n",
+       "26016  Paroled to Detainer - Out of State                        No   \n",
+       "26017          Discharged End of Sentence                       Yes   \n",
+       "26018                              Parole                        No   \n",
+       "26019                              Parole                        No   \n",
+       "\n",
+       "       Recidivism - Return to Prison numeric  \n",
+       "0                                          1  \n",
+       "1                                          1  \n",
+       "2                                          1  \n",
+       "3                                          1  \n",
+       "4                                          1  \n",
+       "...                                      ...  \n",
+       "26015                                      0  \n",
+       "26016                                      0  \n",
+       "26017                                      0  \n",
+       "26018                                      0  \n",
+       "26019                                      0  \n",
+       "\n",
+       "[26020 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.fillna('not')"
    ]
   }
  ],
