--- a/P3 - Arquivo Final.ipynb
+++ b/P3 - Arquivo Final.ipynb
@@ -36,11 +36,11 @@
    "source": [
     "O objetivo desse projeto é analisar qual a probabilidade de um prisioneiro reincidir, analisando as diferentes variáveis que afetam, tais como etnia, idade, tipo de crime, entre outros. \n",
     "\n",
-    "Ou seja, a pergunta poder ser definida por:\n",
+    "Desta forma, a pergunta poder ser definida por:\n",
     "\n",
     "    \"Dadas características, como etnia, idade e tipo de crime de uma determinada pessoa, é mais provável que ele volte à detenção ou ocorra o fenômeno contrário?\"\n",
     "    \n",
-    "Com tal pergunta, guiaremos nosso projeto para utilizar de técnicas de Machine Learning para determinar a resposta que almejamos. Diante de tais fatos e de tal questionamento, fica explícito que temos um problema de **classificação**, tendo em vista que iremos analisar se uma pessoa será reincidente ou não, segundo suas características, fazendo um modelo preditivo para isso."
+    "Com tal pergunta, guiaremos nosso projeto para utilizar de técnicas de Machine Learning para determinar a resposta que almejamos. Diante de tais fatos e de tal questionamento, fica explícito que temos um problema de ***classificação***, tendo em vista que iremos analisar se uma pessoa será reincidente ou não, segundo suas características, fazendo um modelo preditivo para isso."
    ]
   },
   {
@@ -65,11 +65,11 @@
     "* 0,3% Nativos americanos\n",
     "* 1,1% Duas ou mais raças\n",
     "\n",
-    "Através de algumas pesquisas **[2]**, pode-se observar que, nos últimos anos, o índice de reincidência vem aumentando, mesmo que haja uma desaceleração nesse crescimento. Inúmeros detentos voltam a reincindir ainda durante a liberdade condicional ou liberdade com objetivos de trabalho. Essa é uma das prioridades a ser resolvida, de acordo com Beth Skinner, diretora de correçoes da prisao de Iowa. Ainda segundo ela, é preciso se perguntar por que essas pessoas entram e como as mantêm afastadas desde que não representem um risco.\n",
+    "Através de algumas pesquisas **[2]**, pode-se observar que, nos últimos anos, o índice de reincidência vem aumentando, mesmo que haja uma desaceleração nesse crescimento. Inúmeros detentos voltam a reincindir ainda durante a liberdade condicional ou liberdade com objetivos de trabalho. Essa é uma das prioridades a ser resolvida, de acordo com Beth Skinner, diretora de correções da prisão de Iowa. Ainda segundo ela, é preciso se perguntar por que essas pessoas entram e como as mantêm afastadas desde que não representem um risco.\n",
     "\n",
     "Para mais informações sobre o assunto, acesse este [link](https://www.thegazette.com/subject/news/government/iowa-prison-population-highest-in-8-years-20190916). **[2]**\n",
     "\n",
-    "Mas caro deseje mais informações sobre o estado de Iowa, acesse este [link](http://worldpopulationreview.com/states/iowa-population/). **[3]**"
+    "Caso deseje mais informações sobre o estado de Iowa, acesse este [link](http://worldpopulationreview.com/states/iowa-population/). **[3]**"
    ]
   },
   {
@@ -83,20 +83,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O *dataset* a ser analisado é um grande conjunto de dados que tem informações sobre detentos do estado de Iowa, sendo que tais tipos de dados estão descritos um pouco mais abaixo com maior detalhamento acerca de cada uma das variáveis. O propósito de analisar este *dataset* é o de obter uma resposta à pergunta anterior, visando saber se as características das pessoas influenciam na sua reincidência ou não. É de conhecimento que não necessariamente as características em si exercem tal impacto, mas também pode ser algum problema social a ser analisado posteriormente. No entanto, como possuímos estes dados, fica viável analisar primeiro e, posteriomente, para um aperfeiçoamento, buscar explicações mais profundas, com base no grupo social.\n",
+    "O *dataset* a ser analisado é um grande conjunto de dados que tem informações sobre detentos do estado de Iowa, contando com 26021 registros. As variáveis da base de dados estão descritos mais abaixo com maior detalhamento acerca de cada uma das variáveis. O propósito de analisar este *dataset* é o de obter uma resposta à pergunta anterior, visando saber se as características das pessoas influenciam na sua reincidência ou não. É de conhecimento que não necessariamente as características em si exercem tal impacto, mas também pode ser algum problema social a ser analisado posteriormente. No entanto, como possuímos estes dados, fica viável analisar primeiro e, posteriomente, para um aperfeiçoamento, buscar explicações mais profundas, com base no grupo social.\n",
     "\n",
     "É importante ressaltar que o *dataset* foi criado com o objetivo de melhorar o controle sobre os presidiários do estado de Iowa, visando saber como são, qual foi o crime que cometeram e, a partir disso, realizar ações para melhorar a qualidade da segurança do estado e também dos presos, dando um enfoque maior a quem necessita.\n",
     "\n",
-    "Os dados para esta análise podem ser observados [neste site](https://www.kaggle.com/slonnadube/recidivism-for-offenders-released-from-prison) **[4]**, que é denominado Kaggle. \n",
-    "\n",
-    "Também é relevante proferir que o *dataset* utilizado conta com registro de 26021 pessoas, sendo um número totalmente relevante para uma análise.\n"
+    "Os dados para esta análise podem ser observados [neste site](https://www.kaggle.com/slonnadube/recidivism-for-offenders-released-from-prison) **[4]**, que é denominado Kaggle. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explicação cada uma das variáveis"
+    "### Explicação de cada uma das variáveis"
    ]
   },
   {
@@ -170,9 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Primeiramente, começamos a analisar quais são as variáveis que seriam utilizadas para a análise, e observamos que tanto a *\"Recidivism Reporting Year\"* quanto a *\"Release type: Paroled to Detainder united\"* não nos traziam informações relevantes para o projeto. Isso, uma vez que a variável \"Recidivism Reporting Year\" nos dava o ano de soltura somado a 3, pois representa o fim do período de rastreamento do detento, não demonstrando nada sobre a reincidência em si, mas sim acerca do período de acompanhamento do preso. Já a variável *\"Release type: Paroled to Detainder united\"* não foi explicada na fonte do dataset, além dos dados estarem semelhantes aos da variável *\"Release Type\"* *****, não demonstrando nenhuma utilidade no que visávamos ao projeto.\n",
-
     "\n",
     "Com isso, é possível separar a análise em partes para refutar posteriormente à pergunta inicial:\n",
     "\n",
@@ -287,7 +283,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-
    "source": [
     "db.head()"
    ]
@@ -313,7 +308,6 @@
     "scrolled": false
    },
    "outputs": [],
-
    "source": [
     "# Função que plota todos os gráficos exploratórios\n",
     "def exploratoria (data, compara, categorias=[]):\n",
@@ -370,9 +364,7 @@
    "metadata": {
     "scrolled": false
    },
-
    "outputs": [],
-
    "source": [
     "encoder = OneHotEncoder()\n",
     "def one_hot_enc(data, num=[], cat=[]):\n",
@@ -485,14 +477,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***O QUE É A Árvore de Decisão?***"
+    "***O que é a árvore de decisão?***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
+    "Uma árvore de decisão é um método que consiste em uma espécie de caminho que leva dos dados fornecidos até a resposta desejada (no caso os dados do prisioneiro e o resultado de reincidirá ou não). O processo se inicia com uma célula raiz onde um dos valores dos dados será verificado. No caso de variáveis categóricas será verificado qual o valor e no caso de variáveis numéricas se o valor é maior ou menor do que um nível. Os dados são então enviados para uma célula do nível seguinte (determinada pelo resultado do teste) e o processo  se repete até que se chegue em uma célula que contem a resposta, chamada de folha."
    ]
   },
   {
@@ -540,21 +532,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para fazer a terceira análise, preferimos "
+    "Para entender melhor o funcionamento do Multinomial Naive Bayes, partiremos de uma breve explicação sobre o método de Naive Bayes. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***O QUE É O Multinomial Naive Bayes (MNB)?***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Naive Bayes\n",
+    "#### Naive Bayes\n",
     "O algoritmo de Naive Bayes é um classificador probabilístico baseado no teorema de Bayes, utilizado no processo de machine learning. O algoritmo supõe que uma característica independe da outra para acontecer, ou seja, mesmo na presença de uma característica particular em uma classe, isso não afeta na probabilidade de qualquer característica ocorrer. O teorema de bayes é escrito da seguinte forma:\n",
     "\n",
     "* colocar a formula de bayes \n",
@@ -570,8 +555,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
+    "***O QUE É O Multinomial Naive Bayes (MNB)?***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -679,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
