--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -210,7 +210,25 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pydotplus\n",
+      "  Downloading https://files.pythonhosted.org/packages/60/bf/62567830b700d9f6930e9ab6831d6ba256f7b0b730acb37278b0ccdffacf/pydotplus-2.0.2.tar.gz (278kB)\n",
+      "Requirement already satisfied: pyparsing>=2.0.1 in c:\\users\\bruno\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pydotplus) (2.4.2)\n",
+      "Building wheels for collected packages: pydotplus\n",
+      "  Building wheel for pydotplus (setup.py): started\n",
+      "  Building wheel for pydotplus (setup.py): finished with status 'done'\n",
+      "  Created wheel for pydotplus: filename=pydotplus-2.0.2-cp37-none-any.whl size=24573 sha256=9c85f19f623d35832e6b346104577b888c6bdf35cd38ca3558c62cb1e396704c\n",
+      "  Stored in directory: C:\\Users\\bruno\\AppData\\Local\\pip\\Cache\\wheels\\35\\7b\\ab\\66fb7b2ac1f6df87475b09dc48e707b6e0de80a6d8444e3628\n",
+      "Successfully built pydotplus\n",
+      "Installing collected packages: pydotplus\n",
+      "Successfully installed pydotplus-2.0.2\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
@@ -225,6 +243,7 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn import tree\n",
+    "!pip install pydotplus\n",
     "import pydotplus\n",
     "from IPython.display import Image \n",
     "import os"
@@ -239,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -258,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +317,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -313,7 +332,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -328,7 +347,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -343,7 +362,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -358,7 +377,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>Black - Non-Hispanic</td>\n",
@@ -413,7 +432,7 @@
        "4                                      1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,17 +740,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo, estamos realizando a limpeza de onde não há dados, para que não percamos cerca de 10000 dados, mostrando que a divergencia da acurácia posteriormente. É importante manter as linhas e por isso realizaremos tal método e compararemos em cada tipo de análise que fizermos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mudança dos NaN por not\n",
     "db_not = db.fillna('not')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Função OneHotEncoder(), é uma função a qual permite representar variáveis categóricas como uma série de variáveis booleanas. A partir dela é possível realizar a classificaço a partir de arvores de classificaçao e , por consequencia, o Random Forest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = OneHotEncoder()\n",
+    "def one_hot_enc(data,num=[],cat=[]):\n",
+    "    d=data[cat]\n",
+    "    dnum=data[num]\n",
+    "    print (dnum.shape)\n",
+    "    encoded=encoder.fit_transform(d)\n",
+    "    array=encoded.toarray()\n",
+    "    numarray=dnum.values\n",
+    "    return np.concatenate((numarray, array), axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26020, 1)\n",
+      "(16438, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criando para utilizar abaixo, usando o OneHotEnconder()\n",
+    "var_enc = one_hot_enc(db_not,num=['Fiscal Year Released'],cat=['Main Supervising District','Race - Ethnicity','Convicting Offense Classification','Convicting Offense Type','Convicting Offense Subtype','Release Type','Part of Target Population'])\n",
+    "var_enc2 = one_hot_enc(db.dropna(),num=['Fiscal Year Released'],cat=['Main Supervising District','Race - Ethnicity','Convicting Offense Classification','Convicting Offense Type','Convicting Offense Subtype','Release Type','Part of Target Population'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -750,24 +821,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-11827e3f7a82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Fazendo o split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar_enc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Recidivism - Return to Prison numeric'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fazendo o split\n",
-    "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(var_enc, db.dropna['Recidivism - Return to Prison numeric'])"
+    "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(var_enc2, db.dropna()['Recidivism - Return to Prison numeric'])"
    ]
   },
   {
@@ -795,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para a primeira análise dos dados, decidimos iniciar "
+    "Para a primeira análise dos dados, decidimos iniciar com a árvore de decisões, "
    ]
   },
   {
@@ -811,18 +870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train_2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-e02af5e1f74b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodelo2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmodelo2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0my_pred2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodelo2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test_2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train_2' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree: 0.5771289537712896\n"
      ]
     }
    ],
@@ -838,14 +893,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree: 0.6427363566487317\n"
+      "Decision Tree: 0.6481168332052267\n"
      ]
     }
    ],
@@ -867,40 +922,47 @@
    "source": [
     "Abaixo, tem-se o código que plota a árvore de decisão, que pode ser vista de uma maneira melhor com tal amostragem. A inspiração do código pode ser encontrada [neste link](https://chrisalbon.com/machine_learning/trees_and_forests/visualize_a_decision_tree/)! **[5]**\n",
     "\n",
-    "Observar a árvore de decisão é um ótimo passo para entender ela de uma maneira melhor, vendo exatamente como ela trabalha."
+    "Observar a árvore de decisão é um ótimo passo para entender ela de uma maneira melhor, vendo exatamente como ela trabalha*.\n",
+    "\n",
+    "***** **É importante ressaltar que, para rodar tal imagem, é necessário baixar GraphViz's, um programa para rodar tal imagem**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'modelo2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-03784fcb5722>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Usando o graphviz. Sem ele não é possível rodar\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m dot_data = tree.export_graphviz(modelo2, out_file=None, \n\u001b[0m\u001b[0;32m      5\u001b[0m                                 \u001b[0mfeature_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m                                 class_names=Y_train.columns)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'modelo2' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Usando o graphviz. Sem ele não é possível rodar\n",
-    "dot_data = tree.export_graphviz(modelo2, out_file=None, \n",
-    "                                feature_names=X_train.columns,  \n",
-    "                                class_names=Y_train.columns)\n",
+    "dot_data = tree.export_graphviz(modelo2, out_file=None)\n",
     "\n",
     "# Usando o pydotplus\n",
     "grafic = pydotplus.graph_from_dot_data(dot_data)  \n",
     "\n",
     "# Procurando o Graphviz's\n",
-    "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'\n",
-    "\n",
+    "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvocationException",
+     "evalue": "GraphViz's executables not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvocationException\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-a1be9e46ee2e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Plotando a imagem\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrafic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_png\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pydotplus\\graphviz.py\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(f, prog)\u001b[0m\n\u001b[0;32m   1795\u001b[0m             self.__setattr__(\n\u001b[0;32m   1796\u001b[0m                 \u001b[1;34m'create_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfrmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1797\u001b[1;33m                 \u001b[1;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfrmt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprog\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mprog\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1798\u001b[0m             )\n\u001b[0;32m   1799\u001b[0m             \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'create_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfrmt\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pydotplus\\graphviz.py\u001b[0m in \u001b[0;36mcreate\u001b[1;34m(self, prog, format)\u001b[0m\n\u001b[0;32m   1958\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprogs\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1959\u001b[0m                 raise InvocationException(\n\u001b[1;32m-> 1960\u001b[1;33m                     'GraphViz\\'s executables not found')\n\u001b[0m\u001b[0;32m   1961\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1962\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mprog\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprogs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mInvocationException\u001b[0m: GraphViz's executables not found"
+     ]
+    }
+   ],
+   "source": [
     "# Plotando a imagem\n",
     "Image(grafic.create_png())"
    ]
@@ -958,9 +1020,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bruno\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: 0.5725060827250609\n"
+     ]
+    }
+   ],
    "source": [
     "# Sem as linhas que tem NaN\n",
     "modelo1 = RandomForestClassifier()\n",
@@ -973,14 +1051,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\willi\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "C:\\Users\\bruno\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
       "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
      ]
     },
@@ -988,7 +1066,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: 0.6478093774019985\n"
+      "Random Forest: 0.6491929285165258\n"
      ]
     }
    ],
@@ -1073,9 +1151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multinomial Naive Bayes: 0.5990267639902677\n"
+     ]
+    }
+   ],
    "source": [
     "# Escluindo as linhas que tem NaN\n",
     "model3=MultinomialNB()\n",
@@ -1087,14 +1173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multinomial Naive Bayes: 0.6352036894696388\n"
+      "Multinomial Naive Bayes: 0.6402767102229054\n"
      ]
     }
    ],
@@ -1223,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
