--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -722,11 +722,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_not = db.fillna('not')"
+    "db_not = db.fillna('not')\n",
+    "db_sem_na = db.dropna"
    ]
   },
   {
@@ -750,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -760,14 +761,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-11827e3f7a82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Fazendo o split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar_enc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Recidivism - Return to Prison numeric'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-34-2acf5e9f6a43>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Fazendo o split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar_enc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb_sem_na\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Recidivism - Return to Prison numeric'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
      ]
     }
    ],
    "source": [
     "# Fazendo o split\n",
-    "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(var_enc, db.dropna['Recidivism - Return to Prison numeric'])"
+    "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(var_enc, db_sem_na['Recidivism - Return to Prison numeric'])"
    ]
   },
   {
