Update P3 - Arquivo Final-Copy1.ipynb

--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -854,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para a primeira análise dos dados, decidimos iniciar com a árvore de decisões, "
+    "Para a primeira análise dos dados, decidimos iniciar com a árvore de decisões, tendo em vista que é um modelo mais simples do que a Random Forest e servirá para se ver como se comporta os modelos posteriores com relação a ela."
    ]
   },
   {
