--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -208,24 +208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pydotplus\n",
-      "  Downloading https://files.pythonhosted.org/packages/60/bf/62567830b700d9f6930e9ab6831d6ba256f7b0b730acb37278b0ccdffacf/pydotplus-2.0.2.tar.gz (278kB)\n",
-      "Requirement already satisfied: pyparsing>=2.0.1 in c:\\users\\bruno\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pydotplus) (2.4.2)\n",
-      "Building wheels for collected packages: pydotplus\n",
-      "  Building wheel for pydotplus (setup.py): started\n",
-      "  Building wheel for pydotplus (setup.py): finished with status 'done'\n",
-      "  Created wheel for pydotplus: filename=pydotplus-2.0.2-cp37-none-any.whl size=24573 sha256=9c85f19f623d35832e6b346104577b888c6bdf35cd38ca3558c62cb1e396704c\n",
-      "  Stored in directory: C:\\Users\\bruno\\AppData\\Local\\pip\\Cache\\wheels\\35\\7b\\ab\\66fb7b2ac1f6df87475b09dc48e707b6e0de80a6d8444e3628\n",
-      "Successfully built pydotplus\n",
-      "Installing collected packages: pydotplus\n",
-      "Successfully installed pydotplus-2.0.2\n"
+      "Requirement already satisfied: pydotplus in c:\\users\\willi\\anaconda3\\lib\\site-packages (2.0.2)\n",
+      "Requirement already satisfied: pyparsing>=2.0.1 in c:\\users\\willi\\anaconda3\\lib\\site-packages (from pydotplus) (2.3.1)\n"
      ]
     }
    ],
@@ -258,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -277,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +308,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -332,7 +323,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -347,7 +338,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -362,7 +353,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>White - Non-Hispanic</td>\n",
@@ -377,7 +368,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>2010</td>\n",
        "      <td>2013</td>\n",
        "      <td>Black - Non-Hispanic</td>\n",
@@ -432,7 +423,7 @@
        "4                                      1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +487,7 @@
        "1                                   8681"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +545,7 @@
        "1                               0.333628"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -748,21 +739,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_not = db.fillna('not')\n",
-    "db_sem_na = db.dropna"
-=======
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mudança dos NaN por not\n",
     "db_not = db.fillna('not')"
->>>>>>> 903d61c9462a42fd5bb822c000bab4064808b82d
    ]
   },
   {
@@ -774,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {
     "scrolled": false
    },
@@ -830,33 +812,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-34-2acf5e9f6a43>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Fazendo o split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar_enc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb_sem_na\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Recidivism - Return to Prison numeric'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "# Fazendo o split\n",
-    "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(var_enc, db_sem_na['Recidivism - Return to Prison numeric'])"
-=======
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fazendo o split\n",
     "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(var_enc2, db.dropna()['Recidivism - Return to Prison numeric'])"
->>>>>>> 903d61c9462a42fd5bb822c000bab4064808b82d
    ]
   },
   {
@@ -900,14 +861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree: 0.5771289537712896\n"
+      "Decision Tree: 0.5744525547445255\n"
      ]
     }
    ],
@@ -923,21 +884,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree: 0.6481168332052267\n"
+      "Decision Tree: 0.6504227517294389\n"
      ]
     }
    ],
    "source": [
     "# Substituindo NaN\n",
-    "\n",
-    "\n",
     "\n",
     "modelo2 = DecisionTreeClassifier()\n",
     "modelo2.fit(X_train, y_train)\n",
@@ -954,47 +913,45 @@
     "\n",
     "Observar a árvore de decisão é um ótimo passo para entender ela de uma maneira melhor, vendo exatamente como ela trabalha*.\n",
     "\n",
-    "***** **É importante ressaltar que, para rodar tal imagem, é necessário baixar GraphViz's, um programa para rodar tal imagem**"
+    "***É importante ressaltar que, para rodar tal imagem, é necessário baixar GraphViz's, um programa para rodar tal imagem**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Usando o graphviz. Sem ele não é possível rodar\n",
-    "dot_data = tree.export_graphviz(modelo2, out_file=None)\n",
+    "# Substituindo NaN\n",
     "\n",
-    "# Usando o pydotplus\n",
-    "grafic = pydotplus.graph_from_dot_data(dot_data)  \n",
-    "\n",
-    "# Procurando o Graphviz's\n",
-    "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'"
+    "modelo3 = DecisionTreeClassifier(max_depth=4)\n",
+    "modelo3.fit(X_train, y_train)\n",
+    "y_pred3 = modelo3.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "InvocationException",
-     "evalue": "GraphViz's executables not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvocationException\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-a1be9e46ee2e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Plotando a imagem\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrafic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_png\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pydotplus\\graphviz.py\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(f, prog)\u001b[0m\n\u001b[0;32m   1795\u001b[0m             self.__setattr__(\n\u001b[0;32m   1796\u001b[0m                 \u001b[1;34m'create_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfrmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1797\u001b[1;33m                 \u001b[1;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfrmt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprog\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mprog\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1798\u001b[0m             )\n\u001b[0;32m   1799\u001b[0m             \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'create_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfrmt\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pydotplus\\graphviz.py\u001b[0m in \u001b[0;36mcreate\u001b[1;34m(self, prog, format)\u001b[0m\n\u001b[0;32m   1958\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprogs\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1959\u001b[0m                 raise InvocationException(\n\u001b[1;32m-> 1960\u001b[1;33m                     'GraphViz\\'s executables not found')\n\u001b[0m\u001b[0;32m   1961\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1962\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mprog\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprogs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mInvocationException\u001b[0m: GraphViz's executables not found"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Plotando a imagem\n",
-    "Image(grafic.create_png())"
+    "dot_data = tree.export_graphviz(modelo3, out_file='blabla.dot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dreampuf.github.io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<ima"
    ]
   },
   {
@@ -1339,7 +1296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
