--- a/P3 - Arquivo Final.ipynb
+++ b/P3 - Arquivo Final.ipynb
@@ -539,29 +539,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Naive Bayes\n",
-    "O algoritmo de Naive Bayes é um classificador probabilístico baseado no teorema de Bayes, utilizado no processo de machine learning. O algoritmo supõe que uma característica independe da outra para acontecer, ou seja, mesmo na presença de uma característica particular em uma classe, isso não afeta na probabilidade de qualquer característica ocorrer. O teorema de bayes é escrito da seguinte forma:\n",
-    "\n",
-    "* colocar a formula de bayes \n",
-    "\n",
-    "Esse método será utilizado no projeto, uma vez que permite calcular a probabilidade de um detento reincindir, por exemplo, dada as variáveis analisadas.\n",
-    "\n",
-    "A partir do nosso modelo, poderíamos reescrever o teorema de bayes da seguinte forma:\n",
-    "\n",
-    "* colocar a formula de bayes nosso modelo\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "***O QUE É O Multinomial Naive Bayes (MNB)?***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O algoritmo de Naive Bayes é um classificador probabilístico baseado no teorema de Bayes, utilizado no processo de machine learning. O algoritmo supõe que uma característica independe da outra para acontecer, ou seja, mesmo na presença de uma característica particular em uma classe, isso não afeta na probabilidade de qualquer característica ocorrer. O teorema de bayes é escrito da seguinte forma:\n",
+    "\n",
+    "* colocar a formula de bayes \n",
+    "\n",
+    "Esse método será utilizado no projeto, uma vez que permite calcular a probabilidade de um detento reincidir, por exemplo, dada as suas características, assumindo que as características não tem nenhuma relação entre elas.\n",
+    "\n",
+    "A partir do nosso modelo, poderíamos reescrever o teorema de bayes da seguinte forma:\n",
+    "\n",
+    "* colocar a formula de bayes nosso modelo\n",
+    "\n",
+    "A variável C é a classe variável que representa se um detento irá ou não reincidir, a partir das condições estabelecidas (probabilidade de reincidência dada as suas características). A variável *p* representa as o array correspondente a cada preso. *p* pode ser:\n",
+    "\n",
+    "* colocar os possiveis valores de P\n",
+    "\n",
+    "Substituindo *p* por cada uma dos possíveis arrays, temos:\n",
+    "\n",
+    "* colocar a formula de bayes nosso modelo com valores de P\n",
+    "\n",
+    "Para implementar esse algoritmo, utilizamos a função *MultinomialNB( )* da biblioteca *sklearn.naive_bayes* "
+   ]
   },
   {
    "cell_type": "code",
