--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -1078,7 +1078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
+    "Para a realização do Random Forest, na nossa primeira tentativa, utilizamos a funcao \"\" que eliminou todas os registros que tinham algum Nan, ocasionando na remocao de cerca de 10000 mil registros, obtendo uma acurácia de 57,25%. Na nossa segunda tentativa, utilizamos a funcao \"\" que substituiu todos os valores Nan por not, e obteve uma acurácia de 64,91%."
    ]
   },
   {
