--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -972,7 +972,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
+    "A árvore de decisão gerou uma acurácia de 65% com os dados completos e acima podemos observar uma parte dela, apenas para observação de como ela é gerada e como funciona o método. É muito relevante observar na prática como é uma árvore para compreender o código em si. Nela, vemos que a variável x[11] se demonstrou como a menos relevante, que é a característica da pessoa ser branca espânica. \n",
+    "\n",
+    "Com isso, partimos para o aprimoramento do modelo"
    ]
   },
   {
