--- a/P3 - Arquivo Final-Copy1.ipynb
+++ b/P3 - Arquivo Final-Copy1.ipynb
@@ -250,11 +250,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
-=======
-   "execution_count": 29,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {
     "scrolled": false
    },
@@ -273,7 +269,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -421,8 +416,6 @@
    ]
   },
   {
-=======
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -729,11 +722,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
-=======
-   "execution_count": 8,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,11 +739,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
-=======
-   "execution_count": 9,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,11 +756,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
-   "execution_count": 10,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
@@ -795,11 +776,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 12,
-=======
-   "execution_count": 11,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {
     "scrolled": false
    },
@@ -818,11 +795,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 13,
-=======
-   "execution_count": 12,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,22 +844,14 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 14,
-=======
-   "execution_count": 13,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Decision Tree: 0.5754257907542579\n"
-=======
-      "Decision Tree: 0.5705596107055961\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
      ]
     }
    ],
@@ -902,22 +867,17 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
+
    "execution_count": 15,
-=======
-   "execution_count": 14,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
+
       "Decision Tree: 0.6493466564181399\n"
-=======
-      "Decision Tree: 0.6511913912375096\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
+
      ]
     }
    ],
@@ -944,11 +904,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
+
    "execution_count": 16,
-=======
-   "execution_count": 15,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
+
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,11 +918,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
+
    "execution_count": 17,
-=======
-   "execution_count": 16,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
+
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,11 +929,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
+
    "execution_count": 18,
-=======
-   "execution_count": 17,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
@@ -987,11 +940,8 @@
        "<IPython.core.display.Image object>"
       ]
      },
-<<<<<<< HEAD
+
      "execution_count": 18,
-=======
-     "execution_count": 17,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,35 +997,21 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 19,
-=======
-   "execution_count": 18,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "C:\\Users\\willi\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
-=======
       "Random Forest: 0.5686131386861314\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "Random Forest: 0.5666666666666667\n"
-=======
-      "C:\\Users\\bruno\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
+      "Random Forest: 0.5666666666666667\n"2
      ]
     }
    ],
@@ -1091,11 +1027,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 20,
-=======
-   "execution_count": 19,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
@@ -1110,11 +1042,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Random Forest: 0.652728670253651\n"
-=======
-      "Random Forest: 0.6476556495003843\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
      ]
     }
    ],
@@ -1199,22 +1127,14 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 21,
-=======
-   "execution_count": 20,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Multinomial Naive Bayes: 0.5892944038929441\n"
-=======
-      "Multinomial Naive Bayes: 0.5929440389294404\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
      ]
     }
    ],
@@ -1229,22 +1149,14 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 22,
-=======
-   "execution_count": 21,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Multinomial Naive Bayes: 0.6304381245196004\n"
-=======
-      "Multinomial Naive Bayes: 0.6501152959262106\n"
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
      ]
     }
    ],
@@ -1289,11 +1201,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 49,
-=======
-   "execution_count": 22,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,14 +1228,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Usando o dropna pois dá erro com os NaN\n",
-    "testes = novo(db.dropna(),10,['Main Supervising District','Race - Ethnicity','Convicting Offense Classification'\n",
-=======
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1272,6 @@
    ],
    "source": [
     "testes_falha = novo (db_not,10,['Age At Release','Main Supervising District','Race - Ethnicity','Convicting Offense Classification'\n",
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
     "                ,'Convicting Offense Type','Convicting Offense Subtype','Release Type',\n",
     "                'Part of Target Population'],\n",
     "     ['Fiscal Year Released'])"
@@ -1380,9 +1279,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 51,
-=======
    "execution_count": 105,
    "metadata": {},
    "outputs": [
@@ -1563,7 +1459,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
->>>>>>> f5713fd586467d9311c53b6237aa03df160c54d2
    "metadata": {},
    "outputs": [
     {
